// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't rewrite an absolute path in url() declarations 1`] = `
"

.tpyglzj {   
  background-image: url(/assets/test.jpg);
 }
"
`;

exports[`injects global rules to the global scope 1`] = `
"


  /* an invalid rule */
  font-size: 10px;

  html {
    margin: 0;
  }

  body {
    color: black;
  }


"
`;

exports[`rewrites a relative path in url() declarations 1`] = `
"

.tpyglzj {   
  background-image: url(../linaria/assets/test.jpg);
 }
"
`;

exports[`rewrites multiple relative paths in url() declarations 1`] = `
"

.tpyglzj {   
  @font-face {
    font-family: Test;
    src: url(../linaria/assets/font.woff2) format(\\"woff2\\"), url(../linaria/assets/font.woff) format(\\"woff\\");
  }
 }
"
`;
